<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36dp" />
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user"
        android:id="@+id/et_user"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"/>
    
    <RadioGroup 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_sexo"
        android:orientation="horizontal">
        
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sexo1"
            android:id="@+id/rbs1"/>
            
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sexo2"
            android:id="@+id/rbs2"/>
        </RadioGroup>
       
	<Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_tipo"/>
	
	<CheckBox 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/check"
        android:id="@+id/ch_privacy" />
        
	<Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registro_b"
        android:id="@+id/boton"/>

</LinearLayout>